# form_factor

./: .env.example  .gitignore  .markdownlint.json  BUILD.md  CLAUDE.md  CONTINUATION_CONTEXT.md  Cargo.toml  ERROR_REFACTOR_STRATEGY.md  INTEGRATION_TESTING_PLAN.md  LICENSE-MIT  LOGO_DETECTION.md  MAIN_REFACTOR_PLAN.md  OCR.md  PLANNING_INDEX.md  PLUGINS.md  PODMAN.md  SHAPE_PERSISTENCE_FIX.md  STANDARDS_REFACTOR.md  TEMPLATE_SYSTEM_PLAN.md  TEMPLATE_UI_PLAN.md  TEXT_DETECTION.md  UI_ROADMAP.md  UI_ROADMAP_OVERLAY.md  WORKSPACE.md  build.rs  build.sh  justfile  podman_setup_linux.md  podman_setup_windows.md
.cargo/: config.toml
crates/botticelli_health/: Cargo.toml
crates/botticelli_health/src/: accessibility_helpers.rs  canvas_helpers.rs  lib.rs  performance_helpers.rs  plugin_helpers.rs  test_plugins.rs
crates/botticelli_health/tests/: canvas_integration_test.rs  canvas_tool_workflow_test.rs  canvas_ui_test.rs  coordinate_tests.rs  detection_integration_test.rs  error_handling_test.rs  layer_tests.rs  lifecycle_test.rs  performance_test.rs  plugin_coordination_test.rs  registry_tests.rs  tool_tests.rs
crates/form_factor/: Cargo.toml
crates/form_factor/src/: app.rs  detection_results.rs  detection_tasks.rs  error.rs  file_dialogs.rs  lib.rs  main.rs  ocr.rs  plugin_setup.rs  type_conversions.rs  ui_properties.rs  ui_template.rs  ui_update.rs
crates/form_factor/src/backend/: eframe_backend.rs  miniquad_backend.rs
crates/form_factor/src/drawing/: shape.rs
crates/form_factor/src/drawing/canvas/: tools.rs
crates/form_factor/src/event_handlers/: canvas.rs  detection.rs  files.rs  layers.rs  mod.rs  objects.rs  selection.rs  template.rs
crates/form_factor/src/overlays/: manager.rs  mod.rs  template_browser.rs
crates/form_factor/tests/: coordinate_tests.rs  layer_tests.rs  overlay_manager_test.rs  shape_tests.rs
crates/form_factor_backends/: Cargo.toml
crates/form_factor_backends/src/: eframe_backend.rs  lib.rs
crates/form_factor_core/: Cargo.toml
crates/form_factor_core/src/: app.rs  backend.rs  error.rs  instance.rs  lib.rs  template.rs  template_browser.rs  template_browser_error.rs
crates/form_factor_core/src/template/: mod.rs  page_navigation.rs  types.rs
crates/form_factor_cv/: Cargo.toml
crates/form_factor_cv/src/: error.rs  lib.rs  logo_detection.rs  text_detection.rs
crates/form_factor_drawing/: Cargo.toml
crates/form_factor_drawing/src/: app_mode.rs  detection_metadata.rs  error.rs  layer.rs  lib.rs  mode_switcher.rs  recent_projects.rs  shape.rs  tool.rs
crates/form_factor_drawing/src/canvas/: core.rs  field_creator.rs  io.rs  mod.rs  rendering.rs  tools.rs
crates/form_factor_drawing/src/instance/: error.rs  extraction.rs  implementation.rs  migration.rs  mod.rs
crates/form_factor_drawing/src/instance_ui/: data_entry.rs  instance_manager.rs  mod.rs
crates/form_factor_drawing/src/template/: error.rs  implementation.rs  mod.rs  registry.rs
crates/form_factor_drawing/src/template_ui/: editor.rs  error.rs  field_type_selector.rs  manager.rs  manipulation.rs  mod.rs  properties.rs  state.rs  validation.rs
crates/form_factor_drawing/tests/: canvas_integration_test.rs  canvas_tool_workflow_test.rs  canvas_ui_test.rs  instance_tests.rs  multi_page_workflow_test.rs  validation_tests.rs
crates/form_factor_drawing/tests/helpers/: accessibility_helpers.rs  canvas_helpers.rs  mod.rs  plugin_helpers.rs
crates/form_factor_error/: Cargo.toml  README.md
crates/form_factor_error/src/: lib.rs
crates/form_factor_health/: Cargo.toml
crates/form_factor_health/src/: accessibility_helpers.rs  canvas_helpers.rs  lib.rs  performance_helpers.rs  plugin_helpers.rs  test_plugins.rs
crates/form_factor_health/tests/: canvas_integration_test.rs  canvas_tool_workflow_test.rs  canvas_ui_test.rs  coordinate_tests.rs  detection_integration_test.rs  error_handling_test.rs  instance_tests.rs  layer_tests.rs  lifecycle_test.rs  migration_tests.rs  multi_page_workflow_test.rs  performance_test.rs  plugin_coordination_test.rs  registry_tests.rs  selection_property_test.rs  shape_persistence_test.rs  shape_tests.rs  template_builder_tests.rs  tool_tests.rs  ui_shape_drawing_test.rs  validation_tests.rs
crates/form_factor_ocr/: Cargo.toml
crates/form_factor_ocr/src/: lib.rs  ocr.rs
crates/form_factor_plugins/: Cargo.toml
crates/form_factor_plugins/src/: bus.rs  canvas.rs  canvas_field_interaction.rs  detection.rs  detection_properties.rs  event.rs  file.rs  layers.rs  lib.rs  manager.rs  ocr.rs  plugin.rs  properties.rs  template.rs  template_browser_plugin.rs  templates.rs
crates/form_factor_plugins/src/template_ui/: mod.rs  page_navigation_ui.rs
src/: error.rs  lib.rs  logo_detection.rs  main.rs  ocr.rs  text_detection.rs
src/backend/: eframe_backend.rs  miniquad_backend.rs  mod.rs
src/drawing/: canvas.rs  layer.rs  mod.rs  recent_projects.rs  shape.rs  tool.rs
src/drawing/canvas/: core.rs  io.rs  mod.rs  rendering.rs  tools.rs
tests/: layer_tests.rs  tool_tests.rs
