[package]
name = "form_factor"
version = "0.1.0"
edition = "2024"
authors = ["Erik Rose <erik.w.rose@gmail.com>"]
description = "A GUI for tagging scanned forms with OCR metadata."
license = "Apache-2.0 OR MIT"
# keywords = ["economics", "finance", "rest"]
# categories = ["asynchronous", "finance"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "form_factor"

[dependencies]
accesskit = { version = "0.21.1", features = ["serde"] }
egui = { version = "0.33.0", features = ["accesskit", "serde"] }
geo = "0.29"
geo-types = { version = "0.7", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Backend dependencies (optional)
eframe = { version = "0.33.0", optional = true, features = ["accesskit", "wgpu"] }

# Note: miniquad backend disabled until egui-miniquad updates to egui 0.33+
# Current latest egui-miniquad (0.16.0) only supports egui 0.31.1
# egui-miniquad = { version = "0.16.0", optional = true }

[features]
default = ["backend-eframe"]
backend-eframe = ["dep:eframe"]
# backend-miniquad = ["dep:egui-miniquad"]  # Planned for future when ecosystem catches up
