[workspace]
resolver = "2"
members = [
  "crates/form_factor_core",
  "crates/form_factor_drawing",
  "crates/form_factor_cv",
  "crates/form_factor_ocr",
  "crates/form_factor_backends",
  "crates/form_factor_plugins",
  "crates/form_factor", "crates/form_factor_health", "crates/form_factor_error",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Erik Rose <erik.w.rose@gmail.com>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/crumplecup/form_factor"

[workspace.dependencies]
# Core dependencies
egui = { version = "0.33.0", features = ["accesskit", "serde"] }
egui-notify = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"

# Utility dependencies
accesskit = { version = "0.21.1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
derive-getters = "0.5"
derive_setters = "0.1"
derive_builder = "0.20"
derive_more = { version = "2.1", features = ["display", "error", "from"] }
dotenvy = "0.15"
enum-map = { version = "2.7", features = ["serde"] }
geo = "0.31"
geo-types = { version = "0.7", features = ["serde"] }
strum = { version = "0.27", features = ["derive"] }
thiserror = "2.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Image processing
image = { version = "0.25", default-features = false, features = [
  "png",
  "jpeg",
  "webp",
] }

# Computer vision (heavy dependencies)
opencv = { version = "0.97", default-features = false, features = [
  "imgproc",
  "dnn",
  "imgcodecs",
  "clang-runtime",
] }
leptess = "0.14"

# Backend dependencies
eframe = { version = "0.33.0", features = ["accesskit", "wgpu"] }

# File dialogs
rfd = "0.16"

# Async runtime
tokio = { version = "1.48", features = ["sync"] }

# Workspace crates
form_factor_core = { path = "crates/form_factor_core" }
form_factor_drawing = { path = "crates/form_factor_drawing" }
form_factor_cv = { path = "crates/form_factor_cv" }
form_factor_ocr = { path = "crates/form_factor_ocr" }
form_factor_backends = { path = "crates/form_factor_backends" }
form_factor_plugins = { path = "crates/form_factor_plugins" }

[profile.dev]
opt-level = 1      # Slightly optimize dependencies for faster builds
incremental = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
