[package]
name = "form_factor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A GUI for tagging scanned forms with OCR metadata."

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "form_factor"

[dependencies]
# Workspace crates
form_factor_core = { workspace = true }
form_factor_drawing = { workspace = true }
form_factor_cv = { workspace = true, optional = true }
form_factor_ocr = { workspace = true, optional = true }
form_factor_backends = { workspace = true, features = ["eframe"], optional = true }
form_factor_plugins = { workspace = true, optional = true }

# Direct dependencies for error types and demo app
eframe = { workspace = true }
egui = { workspace = true }
egui-notify = { workspace = true }
thiserror = { workspace = true }
derive_more = { workspace = true }
dotenvy = { workspace = true }
rfd = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
image = { workspace = true }

[features]
default = ["backend-eframe"]
backend-eframe = ["dep:form_factor_backends"]
text-detection = ["dep:form_factor_cv", "form_factor_cv/text-detection", "form_factor_drawing/text-detection"]
logo-detection = ["dep:form_factor_cv", "form_factor_cv/logo-detection", "form_factor_drawing/logo-detection"]
ocr = ["dep:form_factor_ocr", "form_factor_drawing/ocr"]

# Plugin system features
plugins = ["dep:form_factor_plugins"]
plugin-canvas = ["plugins", "form_factor_plugins/plugin-canvas"]
plugin-layers = ["plugins", "form_factor_plugins/plugin-layers"]
plugin-file = ["plugins", "form_factor_plugins/plugin-file"]
plugin-detection = ["plugins", "form_factor_plugins/plugin-detection", "text-detection", "logo-detection"]
plugin-ocr = ["plugins", "form_factor_plugins/plugin-ocr", "ocr"]
plugin-properties = ["plugins", "form_factor_plugins/plugin-properties"]
all-plugins = ["plugin-canvas", "plugin-layers", "plugin-file", "plugin-detection", "plugin-ocr", "plugin-properties"]

dev = ["text-detection", "logo-detection", "ocr", "all-plugins"]

[build-dependencies]
dotenvy = { workspace = true }

[dev-dependencies]
strum = { workspace = true }
serde_json = { workspace = true }
