[package]
name = "form_factor_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core traits and types for the form_factor framework"

[dependencies]
chrono = { workspace = true }
derive_builder = { workspace = true }
derive-getters = { workspace = true }
derive_more = { workspace = true }
derive_setters = { workspace = true }
egui = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
