[package]
name = "form_factor_drawing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Drawing canvas with interactive annotation tools for form_factor"

[dependencies]
form_factor_core = { workspace = true }
form_factor_cv = { workspace = true, optional = true }
form_factor_ocr = { workspace = true, optional = true }
egui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
derive-getters = { workspace = true }
derive_setters = { workspace = true }
derive_more = { workspace = true }
derive_builder = { workspace = true }
enum-map = { workspace = true }
strum = { workspace = true }
geo = { workspace = true }
geo-types = { workspace = true }
image = { workspace = true }
tracing = { workspace = true }
regex = "1.11"
dirs = "5.0"

[features]
text-detection = ["dep:form_factor_cv", "form_factor_cv/text-detection"]
logo-detection = ["dep:form_factor_cv", "form_factor_cv/logo-detection"]
ocr = ["dep:form_factor_ocr"]
